added style sheet

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>SIL TOOL</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
     <body>
         <div>
             MENU
