Added SIF list page

--- a/SIFlist.html
+++ b/SIFlist.html
@@ -68,32 +68,13 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Home</a></li>
         <li class="breadcrumb-item"><a href="#">Asset</a></li>
-        <li class="breadcrumb-item"><a href="#">Add SIF</a></li>
-        <li class="breadcrumb-item active" aria-current="page">SIF typicals</li>
+        <li class="breadcrumb-item active" aria-current="page">SIF list</li>
     </ol>
     </nav>
 
 
 
-<!-- Cards -->
-<div class="container float-left">
-    <div class="card float-left bg-light mb-3" style="width: 18rem;margin:10px;">
-        <div class="card-body">
-            <h5 class="card-title">1oo2 architecture</h5>
-            <p class="card-text">Create a typical SIF with a 1 out of 2 configuration.</p>
-            <a href="#" class="btn btn-primary">Add</a>
-        </div>
-    </div>
-    <div class="card float-left bg-light mb-3" style="width: 18rem;margin:10px;">
-        <div class="card-body">
-            <h5 class="card-title">2oo3 architecture</h5>
-            <p class="card-text">Create a typical SIF with a 2 out of 3 configuration</p>
-            <a href="#" class="btn btn-primary">Add</a>
-        </div>
-    </div>
-</div>
-
-
+<!-- SIF list -->
 <div class="container">
         <table class="table">
                 <thead class="thead-light">
