--- a/SIF.html
+++ b/SIF.html
@@ -35,7 +35,7 @@
         <a class="nav-link" href="#">Asset</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="SIFlist.html">SIF list</a>
+        <a class="nav-link" href="SIFlist.php">SIF list</a>
     </li>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
