--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Just an image -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="/img/logo.png" height="35" alt="SIL TOOL" style="border:1px solid #cccccc;">
+            <img src="img/logo.png" height="35" alt="SIL TOOL" style="border:1px solid #cccccc;">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
